--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,20 @@
 {
-	"prefix": ".",
-	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "6285945300923",
-	"ownerNumberr": "+6285945300923",
-	"botnumber": "6285945300923",
+	"prefix": "#",
+	"lolkey": "4d29c31483e08febf40e2430",
+	"ownerNumber": "6285888258313",
+	"ownerNumberr": "+6285888258313",
+	"botnumber": "1213009523",
 	"cr": "Creator BotWea © 2K21",
-	"yt":"https://youtube.com/channel/UCy1HDX_AtOQqt1efnP4HseA",
-	"grub":"https://chat.whatsapp.com/I2GGYVFbKGHIgXY18DOUQi",
-	"wa": "wa.me/+6285945300923",
-	"donate": "6287776101997",
-	"ig": "https://instagram.com/skiuwers",
-	"gt": "https://github.com/skiuwers",
-	"ownername": "© X-M4rh03〆",
-	"botname":"「 S K I U W E R S 」",
+	"yt":"https://www.youtube.com/channel/UCwlknShTm9H-JzD880FfnzQ",
+	"grub":"https://chat.whatsapp.com/FlVqRYt4QcaBKdwJY0wt3X",
+	"wa": "wa.me/12138009523",
+	"donate": "6285888258313",
+	"ig": "no have",
+	"gt": "https://github.com/Trito",
+	"ownername": "© 𐍄𐍂𐌹𐍄𐍉〆",
+	"botname":"「 L O L I T A 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
-	"fake": " 「 S K I U W E R S 」\n© X-M4rh03〆"
+	"fake": " 「 L O L I T A B O T 」\n© 𐍄𐍂𐌹𐍄𐍉〆"
 }
